--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Hello world </title>
+		<title>Hello world </title>
+		<script src="./script.js"></script>
 	</head>
+
+	<body>
+		<script>
+			sayHi();
+		</script>
+
+	</body>
+
+
+
+</html>
 
